Fix ol covers stretched

--- a/src/css/_TextSelection.scss
+++ b/src/css/_TextSelection.scss
@@ -134,6 +134,10 @@
                 text-align: center;
                 margin-left: 2px;
             }
+            img {
+                object-fit: contain;
+                object-position: top;
+            }
             .ol-fb-cover {
                 background: #AAA;
                 border-radius: 2px;
